 (Format: Year/Month/Day)
Changes for 1.1:
*07/03/28:
   * Startup file wasn't being run properly when created the first time (Mark)
     util/startfluxbox.in
*07/03/27:
   * Added new resource session.screen<N>.clientMenu.usePixmap that puts the
     window's icon in the workspace and icons menus: default true. (Mark)
     - For some reason, it doesn't work with un-shaped icons yet, but I've spent
       way too many hours already trying to figure out why
   * Use IconTitle in iconbar for minimized windows (Mark)
*07/03/25:
   * Added new resource session.screen<N>.tabs.usePixmap that puts the window's
     icon in the tab, if available. This is on by default. (Mark)
     Window.cc FbWinFrame.cc/hh WinClient.cc Screen.cc/hh
*07/03/24:
   * Updated French translations (thanks Ulrich Etile)
     nls/fr_FR/Translation.m
   * Fixed a little bug in fbsetbg (Mark)
     util/fbsetbg
   * Added new key command GoToWindow (Mark)
     - Syntax is GoToWindow <int> [<bitmask>], where the int gives the position
       of the desired window with respect to a list of windows, and the bitmask
       is the same as for NextWindow. A negative number for <int> will count
       back from the end of the list.
     - Particularly useful examples are GoToWindow <int> 9 and
       GoToWindow <int> 25, which will focus the window at position <int> in the
       iconbar modes Workspace and WorkspaceNoIcons, respectively.
   * Fixed creation order window cycling with tabbed windows (Mark)
   * Workspace Menu wasn't updating when windows changed titles (Mark)
   * Some other minor changes/code cleanup (Mark)
*07/03/21:
   * HideMenus didn't work on CustomMenus, and also fixed a memleak with
     CustomMenu (Mark + thanks Julien Trolet)
     FbCommands.cc/hh
   * Added new command TypeAheadFocus (Mark)
     - syntax is the same as for NextWindow; when you run the command, you can
       start typing the title of the window, and it will gain focus; pressing