@@ -38,23 +38,17 @@
 #define	 _GNU_SOURCE
 #endif // _GNU_SOURCE
 
-#ifdef HAVE_CSTDIO
-  #include <cstdio>
-#else
-  #include <stdio.h>
-#endif
-#ifdef HAVE_CSTDLIB
-  #include <cstdlib>
-#else
-  #include <stdlib.h>
-#endif
 #ifdef HAVE_CSTRING
   #include <cstring>
 #else
   #include <string.h>
 #endif
+
 #include <iostream>
 #include <fstream>
+#include <set>
+#include <map>
+#include <list>
 
 using std::cout;
 using std::cerr;
@@ -62,39 +56,29 @@ using std::endl;
 using std::string;
 using std::ifstream;
 using std::ofstream;
+using std::set;
+using std::map;
+using std::list;
 
-#define VERSION 1
+string read_file(string filename);
+void write_file(string filename, string &contents);
+void save_all_files();
 
 int run_updates(int old_version, FbTk::ResourceManager rm) {
     int new_version = old_version;
 
     if (old_version < 1) { // add mouse events to keys file
-        FbTk::Resource<string> rc_keyfile(rm, DEFAULTKEYSFILE,
+        FbTk::Resource<string> rc_keyfile(rm, "~/.fluxbox/keys",
                 "session.keyFile", "Session.KeyFile");
         string keyfilename = FbTk::StringUtil::expandFilename(*rc_keyfile);
 
-        // ok, I don't know anything about file handling in c++
-        // what's it to you?!?!
-        // I assume there should be some error handling in here, but I sure
-        // don't know how, and I don't have documentation
-
-        ifstream in_keyfile(keyfilename.c_str());
-        string whole_keyfile = "";
-
-        while (!in_keyfile.eof()) {
-            string linebuffer;
-
-            getline(in_keyfile, linebuffer);
-            whole_keyfile += linebuffer + "\n";
-        }
-        in_keyfile.close();
-
-        ofstream out_keyfile(keyfilename.c_str());
+        string whole_keyfile = read_file(keyfilename);
+        string new_keyfile = "";
         // let's put our new keybindings first, so they're easy to find
-        out_keyfile << "!mouse actions added by fluxbox-update_configs" << endl
-                    << "OnDesktop Mouse1 :hideMenus" << endl
-                    << "OnDesktop Mouse2 :workspaceMenu" << endl
-                    << "OnDesktop Mouse3 :rootMenu" << endl;
+        new_keyfile += "!mouse actions added by fluxbox-update_configs\n";
+        new_keyfile += "OnDesktop Mouse1 :hideMenus\n";
+        new_keyfile += "OnDesktop Mouse2 :workspaceMenu\n";
+        new_keyfile += "OnDesktop Mouse3 :rootMenu\n";
 
         // scrolling on desktop needs to match user's desktop wheeling settings
         // hmmm, what are the odds that somebody wants this to be different on
@@ -108,18 +92,58 @@ int run_updates(int old_version, FbTk::ResourceManager rm) {
                                         "Session.Screen0.ReverseWheeling");
         if (*rc_wheeling) {
             if (*rc_reverse) { // if you ask me, this should have been default
-                out_keyfile << "OnDesktop Mouse4 :prevWorkspace" << endl
-                            << "OnDesktop Mouse5 :nextWorkspace" << endl;
+                new_keyfile += "OnDesktop Mouse4 :prevWorkspace\n";
+                new_keyfile += "OnDesktop Mouse5 :nextWorkspace\n";
             } else {
-                out_keyfile << "OnDesktop Mouse4 :nextWorkspace" << endl
-                            << "OnDesktop Mouse5 :prevWorkspace" << endl;
+                new_keyfile += "OnDesktop Mouse4 :nextWorkspace\n";
+                new_keyfile += "OnDesktop Mouse5 :prevWorkspace\n";
             }
         }
-        out_keyfile << endl; // just for good looks
+        new_keyfile += "\n"; // just for good looks
+        new_keyfile += whole_keyfile; // don't forget user's old keybindings
 
-        // now, restore user's old keybindings
-        out_keyfile << whole_keyfile;
+        write_file(keyfilename, new_keyfile);
         new_version = 1;
+    }
+
+    if (old_version < 2) { // move groups entries to apps file
+        FbTk::Resource<string> rc_groupfile(rm, "~/.fluxbox/groups",
+                "session.groupFile", "Session.GroupFile");
+        string groupfilename = FbTk::StringUtil::expandFilename(*rc_groupfile);
+        string whole_groupfile = read_file(groupfilename);
+
+        FbTk::Resource<string> rc_appsfile(rm, "~/.fluxbox/apps",
+                "session.appsFile", "Session.AppsFile");
+        string appsfilename = FbTk::StringUtil::expandFilename(*rc_appsfile);
+        string whole_appsfile = read_file(appsfilename);
+
+        string new_appsfile = "";
+
+        list<string> lines;
+        FbTk::StringUtil::stringtok(lines, whole_groupfile, "\n");
+
+        list<string>::iterator line_it = lines.begin();
+        list<string>::iterator line_it_end = lines.end();
+        for (; line_it != line_it_end; ++line_it) {
+            new_appsfile += "[group] (workspace)\n";
+
+            list<string> apps;
+            FbTk::StringUtil::stringtok(apps, *line_it);
+
+            list<string>::iterator it = apps.begin();
+            list<string>::iterator it_end = apps.end();
+            for (; it != it_end; ++it) {
+                new_appsfile += " [app] (name=";
+                new_appsfile += *it;
+                new_appsfile += ")\n";
+            }
+
+            new_appsfile += "[end]\n";
+        }
+
+        new_appsfile += whole_appsfile;
+        write_file(appsfilename, new_appsfile);
+        new_version = 2;
     }
 
     return new_version;
@@ -127,6 +151,7 @@ int run_updates(int old_version, FbTk::ResourceManager rm) {
 
 int main(int argc, char **argv) {
     string rc_filename;
+    set<string> style_filenames;
     int i = 1;
     pid_t fb_pid = 0;
 
@@ -165,11 +190,11 @@ int main(int argc, char **argv) {
         // couldn't load rc file
         if (!rc_filename.empty()) {
             cerr<<_FB_CONSOLETEXT(Fluxbox, CantLoadRCFile, "Failed to load database", "Failed trying to read rc file")<<":"<<rc_filename<<endl;
-            cerr<<_FB_CONSOLETEXT(Fluxbox, CantLoadRCFileTrying, "Retrying with", "Retrying rc file loading with (the following file)")<<": "<<DEFAULT_INITFILE<<endl;
+            cerr<<_FB_CONSOLETEXT(Fluxbox, CantLoadRCFileTrying, "Retrying with", "Retrying rc file loading with (the following file)")<<": ~/.fluxbox/init"<<endl;
         }
         // couldn't load default rc file, either
-        if (!resource_manager.load(DEFAULT_INITFILE)) {
-            cerr<<_FB_CONSOLETEXT(Fluxbox, CantLoadRCFile, "Failed to load database", "")<<": "<<DEFAULT_INITFILE<<endl;
+        if (!resource_manager.load("~/.fluxbox/init")) {
+            cerr<<_FB_CONSOLETEXT(Fluxbox, CantLoadRCFile, "Failed to load database", "")<<": ~/.fluxbox/init"<<endl;
             exit(1); // this is a fatal error for us
         }
     }
@@ -182,8 +207,10 @@ int main(int argc, char **argv) {
     int old_version = *config_version;
     int new_version = run_updates(old_version, resource_manager);
     if (new_version > old_version) {
+        // configs were updated -- let's save our changes
         config_version = new_version;
         resource_manager.save(rc_filename.c_str(), rc_filename.c_str());
+        save_all_files();
 
 #ifdef HAVE_SIGNAL_H
         // if we were given a fluxbox pid, send it a reconfigure signal
@@ -194,4 +221,76 @@ int main(int argc, char **argv) {
     }
 
     return 0;
+}
+
+static set<string> modified_files;
+// we may want to put a size limit on this cache, so it doesn't grow too big
+static map<string,string> file_cache;
+
+// returns the contents of the file given, either from the cache or by reading
+// the file from disk
+string read_file(string filename) {
+    // check if we already have the file in memory
+    map<string,string>::iterator it = file_cache.find(filename);
+    if (it != file_cache.end())
+        return it->second;
+
+    // nope, we'll have to read the file
+    ifstream infile(filename.c_str());
+    string whole_file = "";
+
+    if (!infile) // failed to open file
+        return whole_file;
+
+    while (!infile.eof()) {
+        string linebuffer;
+
+        getline(infile, linebuffer);
+        whole_file += linebuffer + "\n";
+    }
+    infile.close();
+
+    file_cache[filename] = whole_file;
+    return whole_file;
+}
+
+#ifdef NOT_USED
+// remove the file from the cache, writing to disk if it's been changed
+void forget_file(string filename) {
+    map<string,string>::iterator cache_it = file_cache.find(filename);
+    // check if we knew about the file to begin with
+    if (cache_it == file_cache.end())
+        return;
+
+    // check if we've actually modified it
+    set<string>::iterator mod_it = modified_files.find(filename);
+    if (mod_it == modified_files.end()) {
+        file_cache.erase(cache_it);
+        return;
+    }
+
+    // flush our changes to disk and remove all traces
+    ofstream outfile(filename.c_str());
+    outfile << cache_it->second;
+    file_cache.erase(cache_it);
+    modified_files.erase(mod_it);
+}
+#endif // NOT_USED
+
+// updates the file contents in the cache and marks the file as modified so it
+// gets saved later
+void write_file(string filename, string &contents) {
+    modified_files.insert(filename);
+    file_cache[filename] = contents;
+}
+
+// actually save all the files we've modified
+void save_all_files() {
+    set<string>::iterator it = modified_files.begin();
+    set<string>::iterator it_end = modified_files.end();
+    for (; it != it_end; ++it) {
+        ofstream outfile(it->c_str());
+        outfile << file_cache[it->c_str()];
+    }
+    modified_files.clear();
 }
